--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "antd": "^4.16.2",
     "mdb-react-ui-kit": "^1.0.0-beta6",
     "mdb-ui-kit": "^3.6.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
